--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-check-box": "^2.1.7",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-modal": "^13.0.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.2.0",
