--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,4 +18,6 @@ target 'BabyNameApp' do
   #     flipper_post_install(installer)
   #   end
   # end
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
 end
