--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-check-box": "^2.1.7",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
