--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "axios": "^0.21.4",
     "expo": "~42.0.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
@@ -21,6 +22,7 @@
     "react-native-check-box": "^2.1.7",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -28,7 +30,12 @@
     "react-native-screens": "^3.4.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-unimodules": "~0.14.5",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-actions": "^2.6.5",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
