--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.7",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -29,6 +31,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-toast-message": "^1.6.0",
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.5",
